--- a/src/styles/base/_variables.scss
+++ b/src/styles/base/_variables.scss
@@ -12,29 +12,34 @@ body {
         font-size: 1.20rem !important;          // ≈ h2 en desktop
       }
   }
-  #navbar {
-    transition: background-color 0.4s ease, color 0.4s ease;
-    background-color: white;
-  
-    .nav-link,
-    .navbar-brand {
-      color: black !important;
-    }
-  
-    .navbar-toggler-icon {
-      background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%280,0,0,0.8%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-    }
-  
-    &:not(.scrolled) {
-      background-color: transparent;
-  
-      .nav-link,
-      .navbar-brand {
-        color: white !important;
-      }
-  
-      .navbar-toggler-icon {
-        background-image: url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 30 30'%3E%3Cpath stroke='rgba%28255,255,255,0.8%29' stroke-width='2' stroke-linecap='round' stroke-miterlimit='10' d='M4 7h22M4 15h22M4 23h22'/%3E%3C/svg%3E");
-      }
-    }
+
+
+
+@media (min-width: 768px) {
+  #testimonialCarousel .carousel-control-prev-icon,
+  #testimonialCarousel .carousel-control-next-icon {
+    width: 5rem;
+    height: 5rem;
+    /* optional: fondo suave para que se vea mejor */
+    border-radius: 50%;
   }
+}
+
+/* 2. Ocultar flechas en móvil */
+@media (max-width: 767px) {
+  #testimonialCarousel .carousel-control-prev,
+  #testimonialCarousel .carousel-control-next {
+    display: none;
+  }
+}
+
+@media (min-width: 768px) {
+  /* botón izquierdo */
+  #testimonialCarousel .carousel-control-prev {
+    margin-left: -5rem;   /* aleja hacia la izquierda */
+  }
+  /* botón derecho */
+  #testimonialCarousel .carousel-control-next {
+    margin-right: -5rem;  /* aleja hacia la derecha */
+  }
+}
