--- a/src/styles/components/_diseños.scss
+++ b/src/styles/components/_diseños.scss
@@ -78,3 +78,10 @@
     padding: 1rem 2rem;
     border-radius: 0.5rem;
   }
+
+
+  #servicios .card-img-top {
+    height: 400px;          /* mismo alto siempre */
+    object-fit: cover;      /* recorta sin deformar */
+    width: 100%;
+  }
